--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <div class="conatiner-content">
                 <a class="a-content">
                     <img src="Foto Syafiq Wisuda SMA.jpeg" class="img-content" />
-                    <p class="p-content">Assalamualaikum Wr. Wb. Hallo semuanya, perkenalkan nama aku Syafiq Muhammad Musyafa Arsy At-Taufiq. Aku lahir di Tegal pada tanggal 24 Maret 2005. Mahasiswa Universitas Sebelas Maret prodi Teknik Informatika. That's all from me, don't forget to contact me. see ya!</p>
+                    <p class="p-content">Assalamualaikum Wr. Wb. Hallo semuanya, perkenalkan nama aku Syafiq Muhammad Musyafa Arsy At-Taufiq. Aku lahir di Tegal pada tanggal 24 Maret 2005. Mahasiswa Universitas Sebelas Maret prodi Teknik Informatika. let's be friends, don't forget to contact me. see ya!</p>
                 </a>
         </div>
         <!-- CONTENT 1 END -->
