--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="conatiner-content">
                 <a href="https://instagram.com/syaqars" class="a-content">
                     <img src="WhatsApp Image 2024-07-03 at 10.07.38 (1).jpeg" class="img-content" />
-                    <p>MAMPIR KE INSTAGRAM DULU YUK!!</p>
+                    <p>Mutual IG yuk! Klik foto diatas</p>
                 </a>
 
         </div>
